--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,9 @@
     <my-header></my-header>
 <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
-    <router-view name="home"></router-view>
-<!-- footer -->
+    <router-view></router-view>
+
+    <!-- footer -->
     <my-footer></my-footer>
 </div>
 <script src="../build/build.js"></script>
