--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>维纳斯</title>
-    <script src="lib/vue/vue.js"></script>
-    <script src="lib/vue/vue-router.js"></script>
-    <script src="lib/swiper/swiper.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/swiper/swiper.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="../build/main.min.css">
 </head>
 <body>
 <div id="app" class="container">
@@ -16,10 +12,10 @@
 <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
-
-    <!-- footer -->
+<!-- footer -->
     <my-footer></my-footer>
 </div>
 <script src="../build/build.js"></script>
+
 </body>
 </html>
