--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>维纳斯</title>
-    <link rel="stylesheet" type="text/css" href="../build/main.min.css">
+     <link rel="stylesheet" type="text/css" href="../build/main.min.css?id=1231231"> 
+    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yourtoken ">-->
 </head>
 <body>
 <div id="app" class="container">
